@@ -1,3 +1,7 @@
+2009-05-12 Nicolas Roard <nicolas@roard.com>
+        Add some comments in the Controller
+	Small modif in the gorm file to better center
+
 2009-01-31 Nicolas Roard <nicolas@roard.com>
 	Fix some saving issues -- you can now edit and save files.
 	* Use a pretty-printed AST for the output file, but build
